<resources>
    <string name="app_name">Pocket RF</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_field_region">Field Regions</string>
    <string name="desciption_activity_field_region">Calculate the distance to near and far field regions</string>
    <string name="freq_mhz">Frequency (MHz)</string>
    <string name="linear_dimension">Linear Aperture (m)</string>
    <string name="diameter">Diameter (m)</string>
    <string name="linear_dimension_tip">The longest linear dimension of the antenna, (diagonal for rectangular antennas, diameter for circular antennas) </string>
    <string name="is_circular">Circular Polarization</string>
    <string name="description_dish_gain">Estimate dish gain and beamwidth</string>
    <string name="efficiency">Aperture Efficiency</string>
    <string name="title_dish_gain">Dish Gain</string>
    <string name="description_radhaz_boundaries">Determine safe distances from RF sources (ICNIRP)</string>
    <string name="rf_power">RF Power Output (W)</string>
    <string name="antenna_gain">Antenna Gain (dBi)</string>
    <string-array name="list_view_titles">
        <item>Field Regions</item>
        <item>Dish Gain</item>
        <item>EARFCN Calculator</item>
        <item>RADHAZ Boundaries</item>
        <item>ICNIRP Levels</item>
        <item>EIRP at a Distance</item>
        <item>Units Converison</item>
        <item>IM Calculator</item>
        <item>VSWR Calculator</item>
        <item>FCC Restricted Bands</item>
        <item>Harmonics Calculator</item>
    </string-array>
    <string-array name="list_view_descriptions">
        <item>Calculate the distance to near and far field regions</item>
        <item>Estimate dish gain and beamwidth</item>
        <item>E-UTRA mobile communications band details</item>
        <item>Determine safe distances from RF sources (ICNIRP)</item>
        <item>Human exposure limits to radio-frequency fields</item>
        <item>Determine EIRP from measured E-field and vice versa</item>
        <item>Conversion of power, field strength and dB values</item>
        <item>Two frequency inter-modulation interference calculations</item>
        <item>VSWR from forward and reverse power</item>
        <item>FCC Rules part 15.205 - Restricted Bands of Operation</item>
        <item>Frequency of harmonics up to 20th harmonic</item>
    </string-array>
    <string name="title_activity_distance_to_radhaz">DistanceToRadhaz</string>

</resources>
