<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_dish_gain"
    tools:context="au.jazzyjas84.pocketrf.DishGain">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:id="@+id/fr_subtitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:divider="@color/colorPrimary"
            android:background="@color/subHeadingBackground"
            android:orientation="vertical"
            android:dividerPadding="8dp"
            android:showDividers="end|beginning"
            android:elevation="1dp">

            <TextView android:text="@string/description_dish_gain"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:textSize="18dp"
                android:textColor="@color/colorSubtitles"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fr_inputs"
            android:layout_below="@id/fr_subtitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:divider="@color/colorPrimary"
            android:orientation="vertical">
            <TextView android:text= "@string/freq_mhz"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textSize="18dp"
                android:textColor="@color/colorSubtitles"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:id="@+id/input_freq_mhz"
                android:singleLine="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView android:text="@string/diameter"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textSize="18dp"
                android:textColor="@color/colorSubtitles"
                />
            <EditText
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_DG_linear_aperture"
                android:singleLine="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView android:text="@string/efficiency"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textSize="18dp"
                android:textColor="@color/colorSubtitles"
                />
            <EditText
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_efficiency"
                android:singleLine="true"
                android:text="0.6"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_gravity="right"
                android:text="OK"
                android:onClick="doCalc"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/fr_inputs"
            android:elevation="3dp">
            <TextView android:id="@+id/txtResult"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:singleLine="false"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textSize="18dp">
            </TextView>
        </ScrollView>
    </RelativeLayout>
    </ScrollView>
